More flavor text and vocab (#226)
* more flavor texts; more vocab

* more names and places

* still more flavor texts; more vocab

* even more flavor texts; more vocab

--- a/src/data/grammar/mtg/story/mtg-characters.yaml
+++ b/src/data/grammar/mtg/story/mtg-characters.yaml
@@ -5,6 +5,7 @@
   ],
   "planeswalkerFirstName": [
       "Ajani#malePronouns#",
+      "Angrath#malePronouns#",
       "Ashiok#pluralPronouns#",
       "Chandra#femalePronouns#",
       "Dack#malePronouns#",
@@ -37,6 +38,7 @@
   ],
     "planeswalkerFullName": [
       "Ajani Goldmane#malePronouns#",
+      "Angrath, Minotaur Pirate#malePronouns#",
       "Ashiok, Nightmare Weaver#pluralPronouns#",
       "Chandra Nalar#femalePronouns#",
       "Dack Fayden#malePronouns#",
@@ -44,6 +46,7 @@
       "Freyalise, Llanowar's Fury#femalePronouns#",
       "Garruk Wildspeaker#malePronouns#",
       "Gideon Jura#malePronouns#",
+      "Gix#malePronouns#",
       "Huatli, Warrior Poet#femalePronouns#",
       "Jace Beleren#malePronouns#",
       "Jaya Ballard#femalePronouns#",
@@ -68,6 +71,7 @@
       "Yawgmoth#malePronouns#"
   ],
   "nonPlaneswalkerCharacter": [
+      "Admiral Beckett Brass#femalePronouns#",
       "Adun Oakenshield#malePronouns#",
       "Alesha#femalePronouns#",
       "Akroma#femalePronouns#",
@@ -78,6 +82,7 @@
       "Belbe#femalePronouns#",
       "Belzenlok#malePronouns#",
       "Borborygmos#malePronouns#",
+      "Chandler#malePronouns#",
       "Commander Eesha#femalePronouns#",
       "Crovax#malePronouns#",
       "Davvol#malePronouns#",
@@ -100,13 +105,17 @@
       "Hidetsugu#malePronouns#",
       "Ink-Eyes#femalePronouns#",
       "Isamaru#malePronouns#",
+      "Joven#malePronouns#",
       "Jhoira#femalePronouns#",
       "Kiki-Jiki#malePronouns#",
       "Molimo#malePronouns#",
       "Momir Vig#malePronouns#",
       "Norin#malePronouns#",
       "Purphoros#malePronouns#",
+      "Purraj of Urborg#femalePronouns#",
+      "Raff Capashen#malePronouns#",
       "Saffi Eriksdotter#femalePronouns#",
+      "Shauku, Endbringer#femalePronouns#",
       "Sisay#femalePronouns#",
       "Slimefoot#malePronouns#",
       "Sol'kanar the Swamp King#malePronouns#",
@@ -116,6 +125,7 @@
       "Tasigur#malePronouns#",
       "Tawnos#malePronouns#",
       "Thassa#femalePronouns#",
+      "Toshiro Umezawa#malePronouns#",
       "Tsabo Tavoc#femalePronouns#",
       "Vinz Clortho#malePronouns#",
       "Volrath#malePronouns#",
@@ -184,128 +194,6 @@
     "#characterDisyllabic#"
   ],
 
-  "commonCharacterFirstName": [
-    "Afari",
-  	"Agathe",
-    "Alcarus",
-    "Anep",
-    "Anitan",
-    "Anje",
-    "Arna",
-    "Axsh",
-    "Baris",
-  	"Borzard",
-  	"Brigone",
-    "Brint",
-    "Bruenna",
-    "Chaeska",
-  	"Chadir",
-    "Daria",
-  	"Devin",
-    "Disa",
-    "Drarg",
-    "Fodrus",
-  	"Galanda",
-    "Garner",
-    "Gorghul",
-    "Goton",
-    "Grete",
-  	"Grezkrick",
-    "Gulsen",
-    "Gulistan",
-    "Halina",
-  	"Halvor",
-  	"Higa",
-  	"Ikarov",
-    "Illulia",
-  	"Ivra",
-    "Jaji",
-    "Javad",
-    "Jazal",
-  	"Jefan",
-    "Jestus",
-  	"Joskun",
-  	"Juri",
-    "Kadhu",
-    "Kellyg",
-    "Kensuke",
-    "Kirce",
-    "Ku-Ku",
-    "Libuse",
-    "Lothar",
-  	"Maikal",
-    "Maeveen",
-    "Maimun",
-  	"Matoc",
-    "Maury",
-    "Meekus",
-    "Minaldra",
-    "Mogai",
-    "Murat",
-  	"Myznar",
-  	"Naxtil",
-  	"Nefara",
-    "Noboru",
-    "Numa",
-  	"Ola",
-    "Olgard",
-    "Onatah",
-  	"Otak",
-    "Predak",
-    "Radulf",
-    "Resimir",
-    "Rimheit",
-  	"Ruba",
-  	"Runo",
-    "Sarlena",
-    "Sirislav",
-  	"Strava",
-  	"Svar",
-    "Syeena",
-    "Taaveti",
-    "Tahli",
-  	"Takada",
-    "Tarran",
-    "Tojira",
-    "Tullus",
-  	"Turni",
-  	"Ushanti",
-  	"Uta",
-  	"Uzric",
-  	"Varrik",
-    "Venkat",
-  	"Vervamon",
-    "Vickon",
-    "Voka",
-    "Vulok",
-    "Wyhorn",
-    "Xantcha",
-  	"Yurin",
-    "Zaliki",
-    "Zemoo",
-    "Zilan",
-    "Zul"
-  ],
-
-  "commonCharacterLastName": [
-    "al-Wyluli",
-  	"Arenson",
-    "Chubbins",
-  	"Dagsson",
-    "Dasai",
-    "Dreya",
-  	"Falkenrath",
-  	"Feudkiller",
-    "Kennerüd",
-    "Kroft",
-  	"Muldrak",
-  	"Nasrin",
-  	"Rutstein",
-    "Schlak",
-  	"Stromkirk",
-  	"Wauki",
-    "#itemNounOrMassNoun.noSpaces.capitalize#[_suffix:bane,sbane]#_suffix#"
-  ],
   "npcCharacter": [
   	"#commonCharacterFirstName# the #adj.capitalize#",
   	"#commonCharacterFirstName#[_lastName:, #commonCharacterLastName#]#_lastName#, [_home:#minorStoryLocation#,#demonym#,#characterFactionOrRace#]#_home.capitalize# #characterClass.capitalize#",
@@ -328,6 +216,7 @@
   	"elder",
   	"evincar",
     "heretic",
+    "initiate",
   	"lunarch",
   	"noble",
     "royal [_position:#characterClass#,#characterProfession#]#_position#",
@@ -340,6 +229,9 @@
     "#creatureTypes# hunter",
     "#nonPlaneLocation# emissary",
     "#massNoun#mancer",
+    "#characterProfession#",
+    "#wizardSubclass#",
+    "#minorCharacterClass#",
     "[_suffix:dancer,singer,caller,speaker,eater,drinker,fighter,maker,mother,father,brother,sister]#nounCompoundWorthy.capitalize.noSpaces##_suffix#"
   ],
   "characterTitleObjectNoun": [
@@ -353,6 +245,8 @@
     "caller",
     "chief",
     "crafter",
+    "duke",
+    "dutchess",
     "hunter",
     "keeper",
     "master",
@@ -365,10 +259,11 @@
     "stalker",
     "warden",
     "walker",
-    "#emotion##verbTransitive.noSpaces.lowercase#er"
+    "#emotion.noSpaces##verbTransitive.noSpaces.lowercase#er"
   ],
   "characterProfession": [
     "architect",
+    "archivist",
     "armorer",
     "astronomer",
     "baliff",
@@ -377,17 +272,43 @@
     "blacksmith",
     "candlemaker",
     "cartwright",
+    "carver",
     "cobbler",
+    "engineer",
     "falconer",
     "inventor",
     "jester",
     "jewler",
     "headsman",
     "magistrate",
+    "metalworker",
+    "scholar",
     "scrivener",
+    "storyteller",
     "tailor",
     "tax collector",
-    "undertaker"
+    "undertaker",
+    "woodworker",
+    "#animal# trainer",
+    "#nounCompoundWorthy#wright"
+  ],
+  "wizardSubclass": [
+    "mutationist",
+    "[_element:fire,wind,tide,stone]#nounCompoundWorthy##_element# mystic",
+    "#nounCompoundWorthy#weaver",
+    "#massNoun#mancer",
+    "#placeNoun# witch",
+    "#abstractNounMassNounOrEmotion# priest[_of:, of #godCharacter#]#_of#"
+  ],
+  "minorCharacterClass": [
+    "guardcaptain",
+    "hermit",
+    "ordinar",
+    "sective",
+    "tactician",
+    "veteran",
+    "whisperer",
+    "#massNoun# rider"
   ],
   "characterRace": [
   	"akki",
@@ -473,7 +394,8 @@
     "Vulshok",
   	"Wojek",
     "#xth.capitalize# Company",
-    "#nounCompoundWorthy#-Tribe"
+    "#nounCompoundWorthy#-Tribe",
+    "#adjStorybook.capitalize# Council"
   ],
 
   "amonkhetCrop": [
