--- a/src/data/grammar/mtg/story/mtg-locations.yaml
+++ b/src/data/grammar/mtg/story/mtg-locations.yaml
@@ -1,7 +1,8 @@
 {
   "plane": ["Rath", "Shandalar", "Mirrodin", "Kamigawa", "Alara", "Zendikar", "Innistrad", "Kaladesh", "Amonkhet", "Ixalan",
             "Muraganda", "Mercadia", "Mirrodin", "Ravnica", "Lorwyn", "Tarkir", "Vryn", "Theros", "Shadowmoor", "Phyrexia",
-            "Dominaria"],
+            "Dominaria", "#obscurePlane#"],
+  "obscurePlane": ["Arkhos", "Azgol", "Belenon", "Equilor", "Ergamon", "Fabacin", "Ir", "Kaldheim", "Karsus", "Kephalai", "Kinshala", "Kolbahan", "Kyneth", "Luvion", "Moag", "Mongseng", "Muruganda", "  Pyrulea", "Rabia", "Segovia", "Ulgrotha", "Valla" ,"Xerex"],
   "nonPlaneLocation": [
       "Adarkar",
       "An-Havva",
@@ -47,6 +48,7 @@
       "Suq'Ata",
       "Tel-Jilad",
       "the Tangle",
+      "Thune",
       "Tolaria",
       "Ulgrotha",
       "Uktabi",
@@ -67,10 +69,14 @@
   	"Amrou",
   	"An-Zerrin",
   	"Ashenmoor",
+    "Atzocan",
+    "Barrenton",
+    "Burrenton",
   	"Coldraith's Keep",
   	"Corondor",
   	"Erdwal",
   	"Gatsaf",
+    "Gramur Forest",
   	"the Helvault",
     "Joraga",
   	"Jukai",
@@ -80,14 +86,18 @@
   	"Makindi",
     "Mauzam Asylum",
   	"Meletis",
+    "Naktamun",
   	"Numai",
+    "Oran-Rief",
   	"Palandius",
   	"Knollridge",
   	"Kroog",
     "Lumengrid",
+    "Oneah",
     "Qal Sisma",
   	"Rootwater",
   	"Talas",
+    "Thraben",
   	"Tidehollow",
   	"Unx",
   	"Vectis City",
@@ -111,6 +121,7 @@
       "Duskmantle",
       "Ekundu",
       "Esper",
+      "Evos Isle",
       "Femeref",
       "Ghirapur",
       "Glen Elendra",
@@ -129,6 +140,7 @@
       "Kuldotha",
       "Llanowar",
       "Malakir",
+      "Martyne",
       "Mercadian",
       "Mephidross",
       "Mwonvuli",
@@ -136,7 +148,9 @@
       "Naya",
       "Nephalia",
       "Oboro",
+      "Onean",
       "Ondu",
+      "Oran-Rief",
       "Orzhova",
       "Oxidda",
       "Rishadan",
@@ -148,6 +162,8 @@
       "Sylvok",
       "Sunhome",
       "Tel-Jilad",
+      "Thraben",
+      "Thunian",
       "Tolarian",
       "Tresserhorn",
       "Uktabi",
