joke team names, more classic strategy article titles

--- a/src/data/grammar/headlines/mtg-strategy-headline.yaml
+++ b/src/data/grammar/headlines/mtg-strategy-headline.yaml
@@ -6,7 +6,7 @@ strategyRealization:
 - "Preview of #teaserCardSet#[_format:, #normalFormat#,in #normalFormat#]: Will [_deck:#deck#,#deckArch#,the new #deckVariation# deck]#_deck# be #deckDescription#?"
 
 playGuide:
-- "CLASSIC STRATEGY: [_adj:#adj#,#cardQuality#][_prefix:The Philosophy of,It's All About the,Next-Level][_topic:#massNoun#,#pluralNoun#,#abstractNoun#,#nouns#,#gameConcept#,#cardCategory.s#,#_adj# Cards]#_prefix# #_topic.capitalizeAll#, by #proFullName#"
+- "CLASSIC STRATEGY: [_adj:#adj#,#cardQuality#][_topic:#massNoun#,#pluralNoun#,#abstractNoun#,#nouns#,#gameConcept#,#cardCategory.s#,#_adj# Cards][_topic:#_topic.capitalizeAll#][_danger:#adj# things,cool #pluralNoun#][_role:#deckLimitedArchetype# player,#playerCategory#,#proMisc#,#personPejorative#][_article:The Philosophy of #_topic##comma#,It's All About the #_topic##comma#,Next-Level #_topic##comma#,The Danger of #_danger.capitalizeAll##comma#,Who's the #_role.capitalizeAll#?]#_article# by #proFullName#"
 - "[_proIs:#pro# is,#pros# #are#,Team #team# is][_developing:#verbCreating# #tech.a#,#verbCreating# #tech.a#,#verbDeveloping# #officialTech.a#][_magicIs:#officialEntity# #are# #verbDeveloping# #officialTech.a#][_what:#_proIs.capitalize# #_developing# to #verbBeat# #obstacle#,#_magicIs# to #wizardsGoal#]#_what#"
 - "[_verbed:printed,banned,unbanned,played,ignored,reprinted]
   [_cardCategory:#cardClassificationBase#,#popularFormat# #cardClassificationBase#,#basicColors# #cardClassificationBase#]
