--- a/src/data/grammar/headlines/comic-titles.yaml
+++ b/src/data/grammar/headlines/comic-titles.yaml
@@ -1,7 +1,7 @@
 {
   "comicTitle":
-    [ "#planeswalkerFirstName#'s Ultimate"
-    , "Flight of the [_adj:#adj#,#basicColors#][_flyer:Cat,Goat,Snake,Turkey,Pony,#creatureTypeOrCharacterClass#]#_adj.capitalize# #_flyer.capitalize#"    , "Fuel for the #massNoun.capitalize#"
+    [ "#planeswalkerFirstName#'s [_what:Ultimate,#collectiveActionOrRealm#]#_what.capitalizeAll#"
+    , "[_action:Flight,#collectiveActionOrRealm#]#_action.capitalize# of the [_adj:#adj#,#adjStorybook#,#adjCorporeal#,#adjColorOrTexture#][_adj:#_adj#,#basicColors#][_flyer:Cat,Goat,Snake,Turkey,Pony,#animal#,#creatureTypeOrCharacterClass#]#_adj.capitalizeAll# #_flyer.capitalize#", "Fuel for the #massNoun.capitalize#"
     , "The #creatureTypes.capitalize#'s Fall"
     , "#abstractNoun.capitalize# Bound"
     , "The #itemNoun.capitalizeAll#'s Curse"
