--- a/src/data/grammar/mtg/card-related/cardfinder/utility-search-categories.yaml
+++ b/src/data/grammar/mtg/card-related/cardfinder/utility-search-categories.yaml
@@ -74,6 +74,10 @@ cardQueryCategoryCard:
  - '[#searchableCardCategoryCustomQuery#][_customQuery:#_customQuery##_colorFilter#][#_customQuery.cardSearchCustomQuery#][_cardName:#_cardName1#]'
 randomCategoryCard: "#cardQueryCategoryCard##_cardName#"
 
+cardQueryLayoutCard: 
+ - '[#searchableLayoutCategory#][_customQuery:#_customQuery##_colorFilter#][#_customQuery.cardSearchCustomQuery#][_cardName:#_cardName1#]'
+randomLayoutCard: "#cardQueryLayoutCard##_cardName#"
+
 cardQueryCardWithOneWordName: 
  - '[_customQuery:name!="? "#_colorFilter#][#_customQuery.cardSearchCustomQuery#][_cardName:#_cardName1#]'
 randomCardWithOneWordName: "#cardQueryCardWithOneWordName##_cardName#"
