--- a/src/data/grammar/mtg/card-related/searchable-color-combos.yaml
+++ b/src/data/grammar/mtg/card-related/searchable-color-combos.yaml
@@ -30,6 +30,8 @@ searchableMulticolorWithLetters:
 - "BG#color_BG#"
 - "GW#color_GW#"
 - "RB#color_RB#"
+- "RG#color_RG#"
+- "RW#color_RW#"
 - "RUG#color_RUG#"
 - "BUG#color_BUG#"
 
